# tested-app-upload

./: .env.example  .gitignore  Makefile  README.md  black.yml  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  jupyter.yml  labels.yml  pg.yml  storybook.yml
client/: Dockerfile  (+3 more)
server/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 51e01761d5d6_require_stocks_name_to_be_unique.py  554263f2fb1d_store_default_language_for_the_user.py  7614e7b25fef_reinitialize_database.py  d50a24f51372_create_user_model.py  d652442200cb_drop_item_stock_relationship.py
server/app/: app_factory.py  main.py  settings.py  start.py
server/app/crud/: __init__.py  auth.py  base.py  crud_inventory.py  crud_item.py  crud_order.py  crud_reservation.py  crud_task.py  crud_todo.py
server/app/db/: redis.py  session.py
server/app/models/: __init__.py  models.py
server/app/schemas/: __init__.py  base.py  inventory.py  item.py  order.py  reservation.py  task.py  todo.py  user.py
server/dev/: Dockerfile-black
server/experiments/: construct_orders.ipynb  into_the_items.ipynb  into_the_menu.ipynb  items_split.ipynb  load_data.py  todo.md
server/experiments/items/: menu_split.py  names_to_merge.py  preprocessing.py
server/experiments/menu/: factory.py  preprocessing.py
server/experiments/orders/: preprocessing.py  schemas.py
server/experiments/scripts/: transform_files.py
server/experiments/tests/: test_load.py
server/seeds/: orders_and_items.py  stock.py
server/tests/: conftest.py
(+212 files in other folders)
