[tool.poetry]
name = "teashop"
version = "0.1.0"
description = ""
authors = ["Michal Bargiel <michal5bargiel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
fastapi = {extras = ["all"], version = "^0.75.1"}
SQLAlchemy = "^1.4.35"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
SQLAlchemy-Utils = "^0.38.2"
bcrypt = "^3.2.2"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.10b0"
mypy = "^0.942"
bson = "^0.5.10"
jupyter = "^1.0.0"
plotly = "^5.8.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
